--- a/FalmatazClothing/Views/Shared/_Layout.cshtml
+++ b/FalmatazClothing/Views/Shared/_Layout.cshtml
@@ -29,6 +29,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MaterialType" asp-action="MaterialTypes">MaterialType</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Products">Product</a>
+                        </li>
                     </ul>
                 </div>
             </div>
