--- a/FalmatazClothing/Views/MaterialType/MaterialTypes.cshtml
+++ b/FalmatazClothing/Views/MaterialType/MaterialTypes.cshtml
@@ -33,7 +33,7 @@
                         </td>
 
                         <td>
-                            <a asp-controller="Material" asp-action="MaterialTypeDetail"
+                            <a asp-controller="MaterialType" asp-action="MaterialTypeDetail"
                                asp-route-id="@item.Id" class="btn btn-outline-info">Detail</a>
 
                             <a asp-controller="MaterialType" asp-action="DeleteMaterialType" asp-route-id="@item.Id"
