--- a/FalmatazClothing/Views/MaterialType/CreateMaterialType.cshtml
+++ b/FalmatazClothing/Views/MaterialType/CreateMaterialType.cshtml
@@ -3,14 +3,14 @@
  }
 
 <div class="row">
-    <div class="col-md-6 rounded mx-auto border p-3">
+    <div class="col-md-8 rounded mx-auto border p-3">
         <h4 class="text-center">MATERIALS</h4>
         <p class="text-center">Create Materials</p>
         <form asp-controller="MaterialType" asp-action="CreateMaterialType" enctype="multipart/form-data">
 
             <div class="mb-3">
                 <label class="form-label">Name</label>
-                <input type="text" class="form-control" name="Fabric" required />
+                <input type="text" class="form-control" name="Name" required />
             </div>
 
             <div class="mb-3">
