--- a/FalmatazClothing/Views/Product/Products.cshtml
+++ b/FalmatazClothing/Views/Product/Products.cshtml
@@ -15,6 +15,7 @@
                 <th scope="col">Product</th>
                 <th scope="col">Material</th>
                 <th scope="col">Image</th>
+                <th scope="col">Quantity</th>
                 <th scope="col">Price</th>
                 <th scope="col">Action</th>
             </tr>
@@ -28,11 +29,12 @@
                 {
                     <tr>
                         <th scope="row">@index</th>
-                        <td>@item.Name</td>
+                        <td>@item.Style</td>
                         <td>@item.MaterialType</td>
                         <td>
                             <img src="@item.ImageProduct" alt="Image" style="width: 100px; height: auto;" />
                         </td>
+                        <td>@item.Quantity</td>
                         <td>@item.Price</td>
 
                         <td>
