--- a/FalmatazClothing/Views/Shared/_SideBar.cshtml
+++ b/FalmatazClothing/Views/Shared/_SideBar.cshtml
@@ -32,20 +32,35 @@
                         <p>Dashboard</p>
                     </a>
                 </li>
+
                 <li class="nav-section">
                     <a href="@Url.Action("MaterialTypes","MaterialType")">
                         <p>MaterialType</p>
                     </a>
                 </li>
+
                 <li class="nav-section">
                     <a href="@Url.Action("Products","Product")">
                         <p>Products</p>
                     </a>
                 </li>
                 </li>
+
                 <li class="nav-section">
-                    <a href="@Url.Action("CartItems","CartItem")">
-                        <p>CartItem</p>
+                    <a href="@Url.Action("Carts","Cart")">
+                        <p>Cart</p>
+                    </a>
+                </li>
+
+                <li class="nav-section">
+                    <a href="@Url.Action("Index","Store")">
+                        <p>Store</p>
+                    </a>
+                </li>
+
+                <li class="nav-section">
+                    <a href="@Url.Action("Index","Order")">
+                        <p>Order</p>
                     </a>
                 </li>
              </ul>
